# DenseFusion-1

./: .gitignore  benchmark.py  benchmark_fastsam_mask.py  benchmark_ycb_pytorch_onnx.py  benchmark_yolo11_mask.py  densefusion-req.md  densefusion-ros-req.md  densefusion_refiner.onnx  download.sh  export_onnx.py  inference_pipeline.py  issue-record.md  issue_record.md  ros-issue-record.md  save_ros_bag_image.py  test_yolo11_seg_onnx.py  visualize_yolo11_seg.py  ycb_benchmark_result.json
RMDemo_Gripper/: requirment.md
RMDemo_Gripper/src/: main.py
RMDemo_Gripper/src/core/: demo_vision_grasping.py  vision_grasping_verification_frames_1_3.json
datasets/: Linemod_preprocessed
densefusion_ros/: CMakeLists.txt  README.md  densefusion_ros_node  densefusion_ros_node_ycb  file_input_publisher  package.xml  setup.cfg  setup.py
densefusion_ros/Linemod_preprocessed/data/01/: test.txt
densefusion_ros/Linemod_preprocessed/data/01/meta/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  (+174 more)
densefusion_ros/densefusion_ros/: densefusion_ros_node.py  densefusion_ros_node_ycb.py  file_input_publisher.py
densefusion_ros/densefusion_ros/densefusion_core/: extractors.py  geometry.py  network.py  preprocess.py  pspnet.py
densefusion_ros/launch/: camera_inference.launch.py  camera_inference_ycb.launch.py  camera_inference_ycb_mask.launch.py  local_file_test.launch.py  local_file_test_ycb.launch.py
densefusion_ros/msg/: PoseEstimationResult.msg
densefusion_ros/resource/: densefusion_ros
densefusion_ros/scripts/: setup.bash
fast-sam-model/: model.onnx
linemod-data-onnx-model/external-data/: densefusion_posenet.onnx
ycb-data-onnx-model/: densefusion_ycb_posenet.onnx  densefusion_ycb_refiner.onnx
