<?xml version="1.0"?>
<package format="3">
  <name>densefusion_ros</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy DenseFusion RGB-D inference package</description>
  <maintainer email="user@example.com">densefusion_user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-onnxruntime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
